[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Nicholas L <nicholas-l@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
nom = "7.0.0"
num = "0.4.0"
rayon = "1.5.1"